--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#dc2626" />
+    <meta name="theme-color" content="#dc2626" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#111827" media="(prefers-color-scheme: dark)" />
     <meta name="description" content="Free, secure, and fast online PDF tools. Merge, split, compress, and convert files directly in your browser with PostupPK.com." />
     <meta name="keywords" content="PDF tools, merge PDF, split PDF, compress PDF, PDF to JPG, word to PDF, image converter, free online utilities, secure PDF processing, client-side PDF, PostupPK, age calculator, unit converter, text to speech, QR generator" />
 
     <title>PostupPK.com - Free PDF Tools & Converters</title>
+
+    <!-- Dark Mode Script - Must run BEFORE any content renders to prevent flash -->
+    <script>
+      (function() {
+        const theme = localStorage.getItem('theme');
+        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        if (theme === 'dark' || (!theme && prefersDark)) {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
 
     <!-- DNS Prefetch for performance -->
     <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
@@ -17,17 +29,16 @@
 
     <!-- Inline Critical CSS for instant paint -->
     <style>
-      *{box-sizing:border-box}
-      html{scroll-behavior:smooth}
-      body{margin:0;padding:0;font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,sans-serif;line-height:1.5}
-      .bg-gray-50{background-color:#f9fafb}
-      .text-gray-900{color:#111827}
-      .dark{color-scheme:dark}
-      .dark .bg-dark-900{background-color:#111827}
-      .dark .text-gray-100{color:#f3f4f6}
-      #root{min-height:100vh}
+      *{box-sizing:border-box;margin:0;padding:0}
+      html{scroll-behavior:smooth;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+      body{font-family:system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;line-height:1.5;background-color:#f9fafb;color:#111827;transition:background-color 0.3s,color 0.3s}
+      .dark body{background-color:#111827;color:#f3f4f6}
+      #root{min-height:100vh;display:flex;flex-direction:column}
       @keyframes spin{to{transform:rotate(360deg)}}
       .loading-spinner{width:40px;height:40px;border:4px solid #e5e7eb;border-top-color:#dc2626;border-radius:50%;animation:spin 1s linear infinite}
+      .dark .loading-spinner{border-color:#374151;border-top-color:#dc2626}
+      .loading-text{margin-top:16px;font-size:14px;color:#6b7280}
+      .dark .loading-text{color:#9ca3af}
     </style>
 
     <!-- Preload critical resources -->
@@ -52,8 +63,8 @@
         theme:{
           extend:{
             colors:{
-              primary:{50:'#fef2f2',100:'#fee2e2',500:'#ef4444',600:'#dc2626',700:'#b91c1c'},
-              dark:{800:'#1f2937',900:'#111827'}
+              primary:{50:'#fef2f2',100:'#fee2e2',200:'#fecaca',300:'#fca5a5',400:'#f87171',500:'#ef4444',600:'#dc2626',700:'#b91c1c',800:'#991b1b',900:'#7f1d1d'},
+              dark:{700:'#374151',800:'#1f2937',900:'#111827'}
             },
             animation:{
               'blob':'blob 7s infinite',
@@ -114,9 +125,9 @@
   <body class="bg-gray-50 text-gray-900 dark:bg-dark-900 dark:text-gray-100 transition-colors duration-300 antialiased selection:bg-primary-500 selection:text-white">
     <div id="root">
       <!-- Accessible Loading UI -->
-      <div role="status" aria-live="polite" aria-label="Loading application" style="display:flex;justify-content:center;align-items:center;height:100vh;flex-direction:column;font-family:system-ui,sans-serif;color:#666;">
+      <div role="status" aria-live="polite" aria-label="Loading application" style="display:flex;justify-content:center;align-items:center;height:100vh;flex-direction:column">
         <div class="loading-spinner" aria-hidden="true"></div>
-        <p style="margin-top:16px;font-size:14px;">Loading application...</p>
+        <p class="loading-text">Loading application...</p>
       </div>
     </div>
     <script type="module" src="/index.tsx"></script>
